--- a/playbooks/install_apache2.yml
+++ b/playbooks/install_apache2.yml
@@ -30,3 +30,17 @@
         state: started
         enabled: yes
       when: ansible_facts['os_family'] == "RedHat"
+
+    - name: Ouvrir le port 80 dans firewalld (HTTP) sur CentOS/RHEL
+      firewalld:
+        port: 80/tcp
+        permanent: true
+        state: enabled
+        immediate: true
+      when: ansible_facts['os_family'] == "RedHat"
+
+    - name: Vérifier que httpd écoute sur le port 80 (CentOS/RHEL)
+      shell: ss -tuln | grep :80
+      register: apache_port_check
+      failed_when: apache_port_check.rc != 0
+      when: ansible_facts['os_family'] == "RedHat"
